# foss-wisdom

./: .gitignore  Contribution.md  README.md  main.py  pyproject.toml
test/: conftest.py  test_version.py
test/detection/: test_iou.py
test/video_loader/: test_video.py
wisdom/: __init__.py  utils.py
wisdom/model/: __init__.py
wisdom/retail/: __init__.py  time_spent.py
wisdom/video_loader/: __init__.py
