[tool.poetry]
name = "wisdom"
version = "0.1.0"
description = ""
authors = ["akhildevelops <akhilgodvsdemon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.2.66"
requests = "^2.32.3"
pyqt5 = "^5.15.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
